--- a/.github/workflows/ci-hugo.yml
+++ b/.github/workflows/ci-hugo.yml
@@ -27,4 +27,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          cname: denalon.js.org
+          cname: pub.iuno.dev
